assets/css/common.css
* {
    margin: 0;
    padding: 0;
    font-family: Microsoft YaHei,"Helvetica Neue",Helvetica,"Segoe UI",Arial,freesans,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
}

/** Header **/
.site-header{
    padding-top:20px;
    padding-bottom:20px;
    width: 100%;
    position: fixed;
    margin: 40px 0 30px 0;
    top: 0;
    left: 0 !important;
    right: 0;
    z-index: 103;

    color: #000;
    background: #fff;

    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -ms-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
}

.site-header #site-header-brand {
    color: #2e2e2e;
    float: left;
}
.icon-play{fill: #000;}
.site-header a {
    text-decoration: none;
}

.site-header a:hover {
    color: #4183c4;
}

#site-header-brand,
#site-header-brand .octicon {
    margin-top: 0;
    margin-bottom: 0;
    font-size: 38px;
    font-weight: 400;
    line-height: 38px;
}

.site-header-nav-scrolled #site-header-brand,
.site-header-nav-scrolled #site-header-brand .octicon {
    font-size: 28px;
}

.site-header-nav{
    float:right;
    /*margin-bottom: -20px;*/
}

.site-header-nav-item {
    color: #000;
    display:inline-block;
    padding:10px;
    margin-left:1.25rem;
    font-size: 20px;
}

/******* Scroll Start *******/
.site-header {
    box-shadow: 0 0 5px rgba(0,0,0,0.1);
}

.icon-logo.site-header-nav-scrolled {fill: #000;}

.site-header.site-header-nav-scrolled {
    margin: 0;
    padding-top: 0;
    padding-bottom: 0;
    background-color: white;
    -webkit-box-shadow: 0 0.125em 0.125em 0 rgba(0, 0, 0, 0.125);
    -moz-box-shadow: 0 0.125em 0.125em 0 rgba(0, 0, 0, 0.125);
    -ms-box-shadow: 0 0.125em 0.125em 0 rgba(0, 0, 0, 0.125);
    -o-box-shadow: 0 0.125em 0.125em 0 rgba(0, 0, 0, 0.125);
    box-shadow: 0 0.125em 0.125em 0 rgba(0, 0, 0, 0.125);
}


/******* Scroll End *******/

/******* Scroll Start on the phone *******/
.site-header {
    box-shadow: 0 0 5px rgba(0,0,0,0.1);
}

.icon-logo.site-header-nav-scrolled-ph {fill: #000;}

.site-header.site-header-nav-scrolled-ph {
    margin-top: -160px;

    -webkit-box-shadow: 0 0.125em 0.125em 0 rgba(0, 0, 0, 0.125);
    -moz-box-shadow: 0 0.125em 0.125em 0 rgba(0, 0, 0, 0.125);
    -ms-box-shadow: 0 0.125em 0.125em 0 rgba(0, 0, 0, 0.125);
    -o-box-shadow: 0 0.125em 0.125em 0 rgba(0, 0, 0, 0.125);
    box-shadow: 0 0.125em 0.125em 0 rgba(0, 0, 0, 0.125);
}
/******* Scroll End *******/

/** Jumbotron **/
.jumbotron {
    padding-top: 200px;
    padding-bottom: 100px;
    color: #fff;
}

.jumbotron a {
    color: #fff;
    text-decoration: none;
}
.jumbotron #jumbotron-meta-info {
    margin-top: 20px;
}

.jumbotron .meta-info {
    font-size: 20px;
    margin-right: 15px;
    display: inline-block;
    vertical-align: middle;
    color: #2e2e2e;
}

.jumbotron .meta-info-index {
    font-size: 12px;
    margin-right: 3px;
    display: inline-block;
    vertical-align: middle;
    color: #2e2e2e;
}

.jumbotron.meta-info, .jumbotron .meta-info .octicon {
    font-size: 18px;
}

/** Footer **/
.site-footer{
    position:relative;
    margin-top:40px;
    padding:40px 0;
    font-size:12px;
    line-height:1.5;
    color:#777;
    border-top:2px solid #eee
}

.site-footer .octicon-mark-github {
    position: absolute;
    left: 50%;
    color: #ccc;
}

.site-footer .octicon-mark-github:hover {
    color:#bbb;
}

/** Post List **/
.post-list-item {
    position: relative;
    padding-top: 30px;
    padding-bottom: 30px;
    list-style: none;
    border-bottom: 1px solid #eee;
}

.post-list-title a {
    text-decoration: none;
}

.post-list-description {
    margin-top: 8px;
    margin-bottom: 0;
    font-size: 18px;
    color: #666;
}

.post-list-meta {
    margin-top: 8px;
    margin-bottom: 0;
    color: #888;
}

.post-list-meta, .post-list-meta.octicon {
    font-size: 18px;
}

.geopattern {
    background-size: contain; /* To fix strange behavior when zoom in/out */
}

.sidebar-title {
    text-align: center;
}

.center {
  text-align: center;
  margin: 0 auto;
}

.center img {
  max-width: 600px; 
  height: auto;
}
.site-footer-icons{
    line-height: 32px;
    text-align: center;
}
.site-footer-icons a{
    display: inline-block;
    margin: 0 2px;
    vertical-align: middle;
}
.site-footer-links {
    line-height: 32px;
    text-align: center;
}
.site-footer-links a{
    display: inline-block;
    margin: 0 2px;
    vertical-align: middle;
}
.site-footer .scrolltop{
    position: absolute;
    right: 0;
    top: 50%;
    margin-top: -16px;
    line-height: 32px;
}
.site-footer .rss{
    position: absolute;
    left: 0;
    top: 50%;
    margin-top: -16px;
    line-height: 32px;
}

.markdown-body img {
    max-width: 600px; 
    height: auto;
    display: block;
    margin: 0 auto;
}
@media (max-width: 640px){
    .markdown-body img{
        max-width: 100%;
    }
}
.archives-list{ list-style: inside; }
.archives-list:after{ width: 100%; height: 0; font: 0/0 a; content: '.'; clear: both; overflow: hidden; }
.archives-list li{ width: 50%; line-height: 1.5; float: left; margin: 10px 0; }
.archives-list li span{ color: #666; }
.archives-list h3{ clear: both; margin: 0; padding: 20px 0 10px; }

blockquote {
    font-size: 15.5px;
}

.site-header-nav-item {
    position: relative;
    padding: 0;
    overflow: visible;
}
.site-header-nav-item > a {
    display: block;
    padding: 5px;
    color: #000;
}
.site-header-nav-item .submenu {
    display: none;
    position: absolute;
    left: 50%;
    top: 48px;
    right: 0;
    z-index: 100;
    margin-left: -71px;
    width: 140px;
    list-style: none;
    border: 1px solid #dcdcdc;
    border-radius: 5px;
    background: #fff;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}
.site-header-nav-item .submenu li {
    font-size: 16px;
    color: #333;
    text-align: center;
    border-bottom: 1px solid #dcdcdc;
}
.site-header-nav-item .submenu li:last-child {
    border-bottom: none;
}
.site-header-nav-item .submenu li a {
    padding: 10px;
    display: block;
    color: #333;
}
.site-header-nav-item .submenu li:first-child a {
    border-radius: 5px 5px 0 0;
}
.site-header-nav-item .submenu li:last-child a {
    border-radius: 0 0 5px 5px;
}
.site-header-nav-item .submenu li a:hover {
    color: #4183c4 !important;
    background: #f6f6f6;
}
.site-header-topbar {
    position: absolute;
    left: 0;
    top: -40px;
    right: 0;
    z-index: 10;
    padding: 10px 0;
}
.topbar-menu {
    float: right;
    font-size: 14px;
    line-height: 20px;
}
.topbar-menu .item {
    display: inline-block;
    margin-left: 15px;
}
.topbar-menu .item a{
    color: #fff !important;
}

.asb-post-01 {
 position: absolute;
 left: 0;
 bottom: 0;
 width: 100%;
 display: none;
 z-index: 10000;
margin-bottom: 0;
}

.asb-post-01 .mask {
 height: 240px;
 width: 100%;
 background: -webkit-gradient(linear, 0 top, 0 bottom, from(rgba(255, 255, 255, 0)), to(#fff));
}

.asb-post-01 .info {
 background: white;
 height: 370px;
 text-align: center;
}

.lock {
    position: relative;
    overflow: hidden;
    padding-bottom: 30px;
}

